# innovationserhebung

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc  .python-version  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run_dev.sh  tailwind.config.js
.github/: CODEOWNERS  renovate.json
app/: main.py  xlsx2json.py
app/config/: custom.yaml  default.yaml
app/data/: basisdaten_clean.xlsx  basisdaten_clean_2025.xlsx  outfile.json
app/importer/: config_importer.py  data_importer.py  mapping.py  parser.py
app/locales/: de.json  en.json
app/plot/: layout.py  plotter.py
app/sliders/: config.yaml  config_custom.yaml  config_default.yaml  config_importer.py  importer.py  mapping.py  parser.py  plotter.py  plotters.py  pn_app.py
app/src/: config_custom.yaml  config_default.yaml  config_importer.py  layout.py  parser.py  plotter.py
app/static/css/: main.css
app/static/js/: custom-dropdown.js  hide-nav-on-top-scroll.js  highlight-nav-links.js  index.js  interactive-nav.js
app/styles/: main.css
app/templates/: base.html  index.html
app/templates/components/: chart-toggle.html  desktop-hero.html  hero-desktop.html  hero-mobile.html  hero.html  intro-section.html  mobile-hero.html  quote-section.html  section.html
app/templates/components/navigation/: desktop-nav.html  footer.html  index.html  mobile-nav.html  nav-desktop.html  nav-header.html  nav-link.html  nav-mobile.html  (+2 more)
app/utils/: translation.py
scripts/: get-fonts.js
